--- a/PZ-WEB-main/PZ-WEB-main/styles/aprende-a-sobrevivir.css
+++ b/PZ-WEB-main/PZ-WEB-main/styles/aprende-a-sobrevivir.css
@@ -12,7 +12,7 @@ margin-left: 315px;
     display: grid;
 
     grid-template-columns: 450px 450px 450px;
-    grid-template-rows: 80px 80px;
+    grid-template-rows: 120px 120px;
     
     grid-row-gap: 400px;
 
@@ -26,6 +26,25 @@ margin-left: 315px;
 .titulo-tip{
     font-weight: bold;
     font-size: 35px;
-    color: gainsboro;
+    color: white;
 }
 
+.texto-tip{
+    width: 350px;
+    margin-bottom: 20px;
+}
+
+.texto{
+    color: white;
+}
+
+.titulo{
+    margin-left: 630px;
+    
+}
+
+.texto-titulo{
+    font-weight: bold;
+    font-size: 50px;
+    color: white;
+}
